manifests/dev/kube.deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "dispatch-msg-ingest-service-deployment"
spec:
  # this replicas value is default
  # modify it according to your case
  replicas: 3
  template:
    metadata:
      labels:
        app: "dispatch-msg-ingest-service-selector"
    spec:
      hostAliases:
        - ip: "10.144.31.140"
          hostnames:
          - "mil-dev-kaf-001"
        - ip: "10.144.31.141"
          hostnames:
          - "mil-dev-kaf-002"
        - ip: "10.144.31.142"
          hostnames:
          - "mil-dev-kaf-003"
        - ip: "10.85.198.116"
          hostnames:
          - "scylla-lu01.prod.fr02.bat.cloud"
      imagePullSecrets:
        - name: tpdservice-devops-image-pull-secret
      containers:
        - name: dispatch-msg-ingest-service
          image: gbs-bat-devops-test-docker-local.artifactory.swg-devops.com/dispatch-msg-ingest-service:latest
          readinessProbe:
            httpGet:
             path: /greeting
             port: 8080
            initialDelaySeconds: 70
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 100Mi
