manifests/dev/kube_service.yml
apiVersion: v1
kind: Service
metadata:
  name: "dispatch-msg-ingest-service"
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  #type: LoadBalancer
  type: NodePort
  ports:
  # the port that this service should serve on
  - name: dispatch-msg-ingest-service
    port: 8080
  selector:
    app: "dispatch-msg-ingest-service-selector"
